--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,217 +12,208 @@
       position: fixed;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      z-index: 0;
       top: 0;
       left: 0;
+      pointer-events: auto;
     }
   </style>
 </head>
+
 <body class="bg-gray-900 text-white font-sans">
   <!-- Moving background -->
   <div id="particles-js"></div>
 
-  <header class="p-6 flex justify-between items-center">
+  <header class="p-6 flex justify-between items-center relative z-10">
     <h1 class="text-2xl font-bold text-green-400"> Snehal Vanage </h1>
     <nav class="space-x-4">
       <a href="#home" class="hover:text-green-400"><i class="fas fa-home"></i> Home</a>
       <a href="#about" class="hover:text-green-400"><i class="fas fa-user"></i> About</a>
       <a href="#projects" class="hover:text-green-400"><i class="fas fa-code"></i> Projects</a>
-       <a href="assets/SNEHAL VANAGE .pdf" download class="inline-block bg-green-400 text-gray-900 px-4 py-2 rounded hover:bg-green-300 transition ml-2 text-base align-middle">
+      <a href="assets/SNEHAL VANAGE .pdf" download
+        class="inline-block bg-green-400 text-gray-900 px-4 py-2 rounded hover:bg-green-300 transition ml-2 text-base align-middle">
         <i class="fas fa-download"></i> Download Resume
       </a>
     </nav>
   </header>
 
-  <!-- <section id="home" class="flex flex-col md:flex-row items-center justify-between px-10 py-20">
-    <div>
-      <p class="text-lg">WELCOME TO MY PORTFOLIO! 👋</p>
+  <section id="home" class="flex items-center justify-center min-h-[60vh] px-10 py-20 relative z-10">
+    <div class="text-center">
+      <p class="text-lg">Hello, WELCOME TO MY PORTFOLIO! </p>
       <h2 class="text-4xl font-bold mt-4">Snehal <span class="text-green-400">Vanage</span></h2>
-      <p class="text-green-400 mt-2">Business Analyst | Curious Learner</p>
+      <p class="text-green-400 mt-2 h-10 text-2xl md:text-3xl font-semibold">
+        <span id="role-rotator"></span>
+      </p>
       <div class="mt-6 space-x-4 text-2xl">
         <a href="https://github.com/SnehalVanag" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/snehal-vanage-a95b29220/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:snehalvanage57@gmail.com"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
-    <div class="mt-10 md:mt-0">
-<img src="images/programmer.gif" alt="My GIF" />
-    </div>
-  </section> -->
+  </section>
 
-  <section id="home" class="flex items-center justify-center min-h-[60vh] px-10 py-20">
-  <div class="text-center">
-    <p class="text-lg">WELCOME TO MY PORTFOLIO! 👋</p>
-    <h2 class="text-4xl font-bold mt-4">Snehal <span class="text-green-400">Vanage</span></h2>
-    <p class="text-green-400 mt-2 h-10 text-2xl md:text-3xl font-semibold">
-      <span id="role-rotator"></span>
-    </p>
-    <div class="mt-6 space-x-4 text-2xl">
-      <a href="https://github.com/SnehalVanag" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/snehal-vanage-a95b29220/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:snehalvanage57@gmail.com"><i class="fas fa-envelope"></i></a>
-    </div>
-  </div>
-</section>
-<!-- <section id="home" class="flex flex-col md:flex-row items-center justify-between px-10 py-20">
-  <div>
-    <p class="text-lg">WELCOME TO MY PORTFOLIO! 👋</p>
-    <h2 class="text-4xl font-bold mt-4">Snehal <span class="text-green-400">Vanage</span></h2>
-    <p class="text-green-400 mt-2 h-10 text-2xl md:text-3xl font-semibold">
-      <span id="role-rotator"></span>
-    </p>
-    <div class="mt-6 space-x-4 text-2xl">
-      <a href="https://github.com/SnehalVanag" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/snehal-vanage-a95b29220/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:snehalvanage57@gmail.com"><i class="fas fa-envelope"></i></a>
-    </div>
-  </div>
-  <div class="mt-10 md:mt-0">
-    <img src="images/programmer.gif" alt="My GIF" />
-  </div>
-</section> -->
-<script>
-  // Rotating roles
-  const roles = ["Data Scientist", "Data Analyst", "Software Engineer"];
-  let roleIndex = 0;
-  const rotator = document.getElementById("role-rotator");
-  function showRole() {
-    rotator.textContent = roles[roleIndex];
-    roleIndex = (roleIndex + 1) % roles.length;
-  }
-  showRole();
-  setInterval(showRole, 1800);
-</script>
-  <section id="about" class="px-10 py-16 bg-gray-800 bg-opacity-80">
-    <h3 class="text-3xl font-bold text-green-400 mb-6">About Me</h3>
-    <p class="max-w-2xl">
-      Detail-oriented and analytical Business Analyst with experience in software development, requirement gathering, and process optimization.
-      Skilled in Python, SQL, Power BI, Tableau, and documentation. Passionate about bridging business needs with technical solutions.
+  <script>
+    // Rotating roles
+    const roles = ["Data Scientist", "Data Analyst", "Software Engineer"];
+    let roleIndex = 0;
+    const rotator = document.getElementById("role-rotator");
+    function showRole() {
+      rotator.textContent = roles[roleIndex];
+      roleIndex = (roleIndex + 1) % roles.length;
+    }
+    showRole();
+    setInterval(showRole, 1800);
+  </script>
+
+  <section id="about" class="px-10 py-16 bg-gray-800 bg-opacity-80 relative z-10">
+    <h3 class="text-3xl font-bold text-green-400 mb-6 flex items-center justify-center">About Me</h3>
+    <p class="flex flex-col items-center justify-center min-h-[60vh] px-10 py-20 text-xl md:text-2xl text-center">
+      Detail-oriented and analytical Business Analyst with experience in software development, requirement gathering,
+      and process optimization.
+      Skilled in Python, SQL, Power BI, Tableau, and documentation. Passionate about bridging business needs with
+      technical solutions.
     </p>
   </section>
 
-<section id="projects" class="px-10 py-16 bg-gray-800 bg-opacity-80">
-  <h3 class="text-3xl font-bold text-green-400 mb-10 text-center">Data Science and Data Analysis Projects</h3>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-    <!-- Project Card 1 -->
-    <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
-      <div class="flex items-center justify-center mb-4">
-        <i class="fab fa-python text-5xl text-green-400 group-hover:animate-bounce"></i>
+  <section id="projects" class="px-10 py-16 bg-gray-800 bg-opacity-80 relative z-10">
+    <h3 class="text-3xl font-bold text-green-400 mb-10 text-center">Data Science and Data Analysis Projects</h3>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <!-- Project Card 1 -->
+      <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
+        <div class="flex items-center justify-center mb-4">
+          <i class="fab fa-python text-5xl text-green-400 group-hover:animate-bounce"></i>
+        </div>
+        <h4 class="text-xl font-bold mb-2 text-green-300">Data Analysis Automation</h4>
+        <p class="mb-4 text-gray-300">Automated data cleaning and visualization using Pandas and Matplotlib. Generates
+          insightful reports from raw business data.</p>
+        <a href="https://github.com/SnehalVanag/Visualization-of-row-data-Using-powerBI-Tableau-and-excel" target="_blank"
+          class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
+          <i class="fab fa-github"></i> View Code
+        </a>
       </div>
-      <h4 class="text-xl font-bold mb-2 text-green-300">Data Analysis Automation</h4>
-      <p class="mb-4 text-gray-300">Automated data cleaning and visualization using Pandas and Matplotlib. Generates insightful reports from raw business data.</p>
-      <a href="https://github.com/SnehalVanag/your-python-project" target="_blank" class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
-        <i class="fab fa-github"></i> View Code
-      </a>
-    </div>
-    <!-- Project Card 2 -->
-    <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
-      <div class="flex items-center justify-center mb-4">
-        <i class="fas fa-robot text-5xl text-green-400 group-hover:animate-spin"></i>
+      <!-- Project Card 2 -->
+      <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
+        <div class="flex items-center justify-center mb-4">
+          <i class="fas fa-robot text-5xl text-green-400 group-hover:animate-spin"></i>
+        </div>
+        <h4 class="text-xl font-bold mb-2 text-green-300">Chatbot Assistant</h4>
+        <p class="mb-4 text-gray-300">A smart chatbot built with Python and NLTK to answer FAQs and automate customer
+          support for small businesses.</p>
+        <a href="https://github.com/SnehalVanag/Visualization-of-row-data-Using-powerBI-Tableau-and-excel" target="_blank"
+          class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
+          <i class="fab fa-github"></i> View Code
+        </a>
       </div>
-      <h4 class="text-xl font-bold mb-2 text-green-300">Chatbot Assistant</h4>
-      <p class="mb-4 text-gray-300">A smart chatbot built with Python and NLTK to answer FAQs and automate customer support for small businesses.</p>
-      <a href="https://github.com/SnehalVanag/your-chatbot-project" target="_blank" class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
-        <i class="fab fa-github"></i> View Code
-      </a>
-    </div>
-    <!-- Project Card 3 -->
-    <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
-      <div class="flex items-center justify-center mb-4">
-        <i class="fas fa-chart-line text-5xl text-green-400 group-hover:animate-pulse"></i>
+      <!-- Project Card 3 -->
+      <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
+        <div class="flex items-center justify-center mb-4">
+          <i class="fas fa-chart-line text-5xl text-green-400 group-hover:animate-pulse"></i>
+        </div>
+        <h4 class="text-xl font-bold mb-2 text-green-300">Sales Forecasting Model</h4>
+        <p class="mb-4 text-gray-300">Built a machine learning model in Python (scikit-learn) to predict future sales
+          trends and assist in business planning.</p>
+        <a href="https://github.com/SnehalVanag/Visualization-of-row-data-Using-powerBI-Tableau-and-excel" target="_blank"
+          class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
+          <i class="fab fa-github"></i> View Code
+        </a>
       </div>
-      <h4 class="text-xl font-bold mb-2 text-green-300">Sales Forecasting Model</h4>
-      <p class="mb-4 text-gray-300">Built a machine learning model in Python (scikit-learn) to predict future sales trends and assist in business planning.</p>
-      <a href="https://github.com/SnehalVanag/your-forecasting-project" target="_blank" class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
-        <i class="fab fa-github"></i> View Code
-      </a>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="projects" class="px-10 py-16 bg-gray-800 bg-opacity-80">
-  <h3 class="text-3xl font-bold text-green-400 mb-10 text-center">Wokrd on Projects</h3>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-    <!-- Titan Project Card -->
-    <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
-      <div class="flex items-center justify-center mb-4">
-        <i class="fas fa-industry text-5xl text-green-400 group-hover:animate-bounce"></i>
+  <section id="projects" class="px-10 py-16 bg-gray-800 bg-opacity-80 relative z-10">
+    <h3 class="text-3xl font-bold text-green-400 mb-10 text-center">Worked on Projects</h3>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <!-- Titan Project Card -->
+      <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
+        <div class="flex items-center justify-center mb-4">
+          <i class="fas fa-industry text-5xl text-green-400 group-hover:animate-bounce"></i>
+        </div>
+        <h4 class="text-xl font-bold mb-2 text-green-300">Titan – Watch Assembly Optimization</h4>
+        <p class="mb-4 text-gray-300">Used Six Sigma to reduce defect rate from 7% to 1.5%.<br>
+          <span class="text-green-400">Tools:</span> Excel, MySQL, NodeJS
+        </p>
       </div>
-      <h4 class="text-xl font-bold mb-2 text-green-300">Titan – Watch Assembly Optimization</h4>
-      <p class="mb-4 text-gray-300">Used Six Sigma to reduce defect rate from 7% to 1.5%.<br>
-        <span class="text-green-400">Tools:</span> Excel, MySQL, NodeJS
-      </p>
-      <!-- <a href="https://github.com/SnehalVanag/titan-watch-optimization" target="_blank" class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
-        <i class="fab fa-github"></i> View Code
-      </a> -->
-    </div>
-    <!-- Infusive Project Card -->
-    <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
-      <div class="flex items-center justify-center mb-4">
-        <i class="fas fa-notes-medical text-5xl text-green-400 group-hover:animate-spin"></i>
+      <!-- Infusive Project Card -->
+      <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
+        <div class="flex items-center justify-center mb-4">
+          <i class="fas fa-notes-medical text-5xl text-green-400 group-hover:animate-spin"></i>
+        </div>
+        <h4 class="text-xl font-bold mb-2 text-green-300">Infusive – Healthcare Inventory</h4>
+        <p class="mb-4 text-gray-300">Defined requirements, validated scenarios with Cypress.<br>
+          <span class="text-green-400">Tools:</span> Angular, MongoDB
+        </p>
       </div>
-      <h4 class="text-xl font-bold mb-2 text-green-300">Infusive – Healthcare Inventory</h4>
-      <p class="mb-4 text-gray-300">Defined requirements, validated scenarios with Cypress.<br>
-        <span class="text-green-400">Tools:</span> Angular, MongoDB
-      </p>
-      <!-- <a href="https://github.com/SnehalVanag/infusive-inventory" target="_blank" class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
-        <i class="fab fa-github"></i> View Code
-      </a> -->
-    </div>
-    <!-- Time Tracker Project Card -->
-    <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
-      <div class="flex items-center justify-center mb-4">
-        <i class="fas fa-user-clock text-5xl text-green-400 group-hover:animate-pulse"></i>
+      <!-- Time Tracker Project Card -->
+      <div class="bg-gray-900 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 p-6 group border border-green-400">
+        <div class="flex items-center justify-center mb-4">
+          <i class="fas fa-user-clock text-5xl text-green-400 group-hover:animate-pulse"></i>
+        </div>
+        <h4 class="text-xl font-bold mb-2 text-green-300">Time Tracker – Employee Management</h4>
+        <p class="mb-4 text-gray-300">Documented system with role-based access.<br>
+          <span class="text-green-400">Tools:</span> Angular, PostgreSQL, Express
+        </p>
       </div>
-      <h4 class="text-xl font-bold mb-2 text-green-300">Time Tracker – Employee Management</h4>
-      <p class="mb-4 text-gray-300">Documented system with role-based access.<br>
-        <span class="text-green-400">Tools:</span> Angular, PostgreSQL, Express
-      </p>
-      <!-- <a href="https://github.com/SnehalVanag/time-tracker" target="_blank" class="inline-block px-4 py-2 bg-green-400 text-gray-900 rounded hover:bg-green-300 font-semibold transition">
-        <i class="fab fa-github"></i> View Code
-      </a> -->
     </div>
-  </div>
-</section>
+  </section>
 
-
-
-  <footer class="text-center p-6 text-gray-400">
+  <footer class="text-center p-6 text-gray-400 relative z-10">
     &copy; 2025 Snehal Vanage.
   </footer>
 
   <!-- Particles.js script -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 60 },
-        color: { value: "#00ff99" },
-        shape: { type: "circle" },
-        opacity: { value: 0.5 },
-        size: { value: 3 },
-        line_linked: {
-          enable: true,
-          distance: 150,
-          color: "#00ff99",
-          opacity: 0.4,
-          width: 1
-        },
-        move: {
-          enable: true,
-          speed: 2,
-          direction: "none",
-          random: false,
-          out_mode: "bounce"
-        }
-      },
-      interactivity: {
-        events: {
-          onhover: { enable: true, mode: "repulse" }
-        }
-      },
-      retina_detect: true
-    });
-  </script>
+<script>
+  const baseConfig = {
+  particles: {
+    number: { value: 60 },
+    color: { value: "#00ff99" },
+    shape: { type: "circle" },
+    opacity: { value: 0.5 },
+    size: { value: 3 },
+    line_linked: {
+      enable: true,
+      distance: 150,
+      color: "#00ff99",
+      opacity: 0.4,
+      width: 1
+    },
+    move: {
+      enable: true,
+      speed: 2,
+      direction: "none",
+      random: false,
+      out_mode: "bounce"
+    }
+  },
+  interactivity: {
+    events: {
+      onhover: { enable: true, mode: "repulse" }
+    },
+    modes: {
+      repulse: { distance: 150, duration: 0.4 }
+    }
+  },
+  retina_detect: true
+};
+
+const noLineConfig = JSON.parse(JSON.stringify(baseConfig));
+noLineConfig.particles.line_linked.opacity = 0;
+
+particlesJS("particles-js", baseConfig);
+
+const particlesDiv = document.getElementById('particles-js');
+particlesDiv.addEventListener('mouseleave', function () {
+  if (window.pJSDom && window.pJSDom[0]) {
+    window.pJSDom[0].pJS.fn.vendors.destroypJS();
+    particlesJS("particles-js", noLineConfig);
+  }
+});
+particlesDiv.addEventListener('mouseenter', function () {
+  if (window.pJSDom && window.pJSDom[0]) {
+    window.pJSDom[0].pJS.fn.vendors.destroypJS();
+    particlesJS("particles-js", baseConfig);
+  }
+});
+</script>
 </body>
 </html>
